# ALL_APP_STORE

./: developerurlmain(Imp).py  lgtest.py  main.py  pyproject.toml  requirements.txt  tes.py  test.xlsx  validation.py
failure_output/: android_failure.parquet  roku_failure.parquet
output/: android.parquet  apple.parquet  combined.parquet  combined_permanent.parquet  gallaxy.parquet
routed_ids/: amazon.parquet  gallaxy.parquet  roku.parquet
routed_ids_cache/: bundle_cache.parquet
store_validator/: Samsung_app_store.py  amazon_store.py  android_store.py  apple_store.py  gallaxy.py  lgstore.py  microsft_store.py  roku.py  vizio.py  zeasn.py
store_validator/LG_store/: lg_all_apps.csv  lg_all_apps_with_developer_urls_async.csv  lg_finding_apps.py  searching_domain_apps.py
store_validator/roku_store/: get_roku_app_details.py  rokudownloaded.ipynb  serching_Domainlg.py  testing_searching(final).py
store_validator/vizio_store/: philips_vizio_appstoday.parquet  vizio.ipynb
